src/objects/LF_Main__c.object
<CustomObject>
    <description>Main object for Lost &amp; Found system, stores key info and relationship to other tables</description>
    <fields>
        <fullName>Found_Comments__c</fullName>
        <label>Found_Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Found_Lnk_Main_ID__c</fullName>
        <label>Found_Lnk_Main_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <label>General_Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LF_Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LF_Contact_ID</label>
        <referenceTo>LF_Contact__c</referenceTo>
        <relationshipLabel>LF_Mains_Contact</relationshipLabel>
        <relationshipName>LF_Mains_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LF_EntryType_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LF_EntryType_ID</label>
        <referenceTo>LF_EntryType__c</referenceTo>
        <relationshipLabel>LF_Mains_EType</relationshipLabel>
        <relationshipName>LF_Mains_EType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LF_Location_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup from Main to Location</description>
        <label>LF_Location_ID</label>
        <referenceTo>LF_Location__c</referenceTo>
        <relationshipLabel>LF_Mains_Loc</relationshipLabel>
        <relationshipName>LF_Mains_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LostDate__c</fullName>
        <label>LostDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Comments__c</fullName>
        <label>Lost_Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>LF_Main</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>LF_Main_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LF_Mains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>